--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=ExpenseTracker
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vb4Arq2D5Ph7QmVafsG5M0+5t395BoZ54WVhSoYyyNc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=expense_tracker
+DB_DATABASE=expense_tracker_laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
